Fix commenting empty lines

BUG:233210

svn path=/trunk/KDE/kdelibs/kate/; revision=1193975